--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -9,7 +9,7 @@ mpd_port = "6600"
 mpd_connection_timeout = "5"
 
 #### Directory ####
-mpd_music_dir = "~/Music"
+mpd_music_dir = "/mnt/Data_1/Audio/Music"
 
 #### Playlist ####
 playlist_disable_highlight_delay = "3"
@@ -22,11 +22,9 @@ playlist_display_mode = "columns" (classic/columns)
 browser_display_mode = "columns" (classic/columns)
 progressbar_look = "-_"
 user_interface = "classic" (classic/alternative)
-media_library_left_column = "a" (possible values: a,y,g,c,p, legend above)
 header_visibility = "no"
 statusbar_visibility = "yes"
 header_text_scrolling = "yes"
-fancy_scrolling = "yes"
 display_remaining_time = "yes"
 ignore_leading_the = "yes"
 empty_tag_marker = ""
@@ -43,3 +41,9 @@ main_window_highlight_color = "cyan"
 progressbar_color = "magenta"
 statusbar_color = "cyan" 
 active_column_color = "cyan"
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "my_fifo"
+visualizer_sync_interval = "30" 
+visualizer_in_stereo = "yes"
+#visualizer_type = "wave" (spectrum/wave)
+visualizer_type = "spectrum" (spectrum/wave)
