--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,19 +1,14 @@
-# screen keybind
-unbind C-b
-set -g prefix C-a
-
 # start window-numbering at 1
 set -g base-index 1
 
-# unicode
-setw -g utf8 on
-set -g status-utf8 on
+# default terminal
+#set -g default-terminal "xfce4-terminal"
+set -g default-terminal "xterm-256color"
 
 # status bar config
 set -g status-left "#h:[#S]"
 set -g status-left-length 50
 set -g status-right-length 50
-set -g status-right "⚡ #(~/bin/tmux-battery) %H:%M %d-%h-%Y"
 setw -g window-status-current-format "|#I:#W|"
 set-window-option -g automatic-rename off
 
@@ -23,10 +18,6 @@ set -g bell-action any
 # rebind pane tiling
 bind V split-window -h
 bind H split-window
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
 
 # screen like window toggling
 bind Tab last-window
@@ -38,10 +29,3 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-# misc
-bind-key a  send-prefix
-
-# bind fast session switching
-unbind S
-bind S command-prompt "switch -t %1"
