--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -2,12 +2,11 @@ set $mod Mod4
 font pango:hack Regular 10
 floating_modifier $mod
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec st
 # kill focused window
 bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec j4-dmenu-desktop
+bindsym $mod+d exec dmenu_run
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -99,47 +98,84 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-bar {
-  status_command i3status
-  colors {
-    separator #928374
-    background #282828
-    statusline #ebdbb2
-    focused_workspace #689d6a #689d6a #282828
-    active_workspace #1d2021 #1d2021 #928374
-    inactive_workspace #32302f #32302f #928374
-    urgent_workspace #cc241d #cc241d #ebdbb2
-  }
-}
+# bar {
+#   status_command i3status
+#   colors {
+#     separator #928374
+#     background #282828
+#     statusline #ebdbb2
+#     focused_workspace #689d6a #689d6a #282828
+#     active_workspace #1d2021 #1d2021 #928374
+#     inactive_workspace #32302f #32302f #928374
+#     urgent_workspace #cc241d #cc241d #ebdbb2
+#   }
+# }
 
-client.focused #689d6a #689d6a #282828 #282828
-client.focused_inactive #1d2021 #1d2021 #928374 #282828
-client.unfocused #32302f #32302f #928374 #282828
-client.urgent #cc241d #cc241d #ebdbb2 #282828
+# client.focused #689d6a #689d6a #282828 #282828
+# client.focused_inactive #1d2021 #1d2021 #928374 #282828
+# client.unfocused #32302f #32302f #928374 #282828
+# client.urgent #cc241d #cc241d #ebdbb2 #282828
 
-exec --no-startup-id mpd &
 exec --no-startup-id redshift &
-exec --no-startup-id transmission-qt &
-exec --no-startup-id sh ~/.bin/load_layout.sh &
+# exec --no-startup-id sh ~/.bin/load_layout.sh &
 # exec --no-startup-id slack &
-# exec --no-startup-id discord-canary &
-# exec --no-startup-id hexchat &
-exec --no-startup-id feh --bg-scale /home/cgar/Pictures/Wallpapers/Simple/Ghost.png &
+# exec --no-startup-id feh --bg-scale /home/cgar/Pictures/Wallpapers/Simple/Ghost.png &
 
-set $Locker i3lock -i ~/Pictures/Wallpapers/Simple/Ghost.png && sleep 1
+# set $Locker i3lock -i ~/Pictures/Wallpapers/Simple/Ghost.png && sleep 1
+set $Locker slock && sleep 1
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
+    bindsym s exec --no-startup-id $Locker && suspend, mode "default"
+    bindsym r exec --no-startup-id doas reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id doas shutdown -p now, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
 
-bindsym $mod+Pause mode "$mode_system"
+bindsym $mod+Delete mode "$mode_system"
+
+# Colours
+set $bg_active                  #16C2FB
+set $bg_inactive                #007095
+set bg_urgent                   #FF2800
+
+set $border_active              #16C2FB
+set $border_inactive            $bg_inactive
+set $border_urgent              $B27B78
+
+set $text_active                #FDFEFF
+set $text_inactive              #212121
+
+set $bg_active_workspace        #383E47
+set $bg_inactive_workspace      #C48D62
+
+set $bg_bar                     #383E47AA
+set $indicator                  #03C0FF
+
+set $rofi_bg                    #007095
+set $rofi_fg                    #000000
+set $rofi_selected              #FFFFFF
+
+
+#######################################################
+#                        Bar                          #
+#######################################################
+
+ bar {
+    status_command i3status
+
+ 	colors {
+      background $bg_bar
+	  focused_workspace $bg_active $bg_active_workspace $text_active
+      inactive_workspace $bg_inactive_workspace $bg_inactive_workspace $text_inactive
+      active_workspace $bg_inactive_workspace $bg_inactive_workspace $text_inactive
+ 	}
+
+    separator_symbol ">>"
+}
+
